corpus/cpp/deleted_function/case-01/snapshots/gcc15/dual_sink_structured/render.ci.txt
src/main.cpp:10:5: error: [unavailable_api] use of deleted function 'NoCopy::NoCopy(const NoCopy&)'
name: NoCopy::NoCopy(const NoCopy&)
use : take(value);
from: src/main.cpp:3:5 NoCopy(const NoCopy&) = delete;
| src/main.cpp:10:5
|     take(value);
|     ^

src/main.cpp:6:11: note: [unknown] initializing argument 1 of 'void take(NoCopy)'
note: wrapper confidence is low; verify against the preserved raw diagnostics
raw : initializing argument 1 of 'void take(NoCopy)'
| src/main.cpp:6:11
| void take(NoCopy value) {}
|           ^
details: --formed-explain | raw: --formed-raw